@@ -21,8 +21,10 @@
 
 #include "AutoRecording.h"
 
+#include "../Settings.h"
 #include "../../Tvheadend.h"
 
+using namespace tvheadend;
 using namespace tvheadend::entity;
 
 AutoRecording::AutoRecording(const std::string &id /*= ""*/) :
@@ -54,7 +56,7 @@ bool AutoRecording::operator!=(const AutoRecording &right)
 
 time_t AutoRecording::GetStart() const
 {
-  if (tvh->GetSettings().bAutorecApproxTime)
+  if (Settings::GetInstance().bAutorecApproxTime)
   {
     /* Calculate the approximate start time from the starting window */
     if ((m_startWindowBegin == int32_t(-1)) ||
@@ -90,7 +92,7 @@ void AutoRecording::SetStartWindowBegin(int32_t start)
 
 time_t AutoRecording::GetStop() const
 {
-  if (tvh->GetSettings().bAutorecApproxTime)
+  if (Settings::GetInstance().bAutorecApproxTime)
   {
     /* Tvh doesn't have an approximate stop time => "any time" */
     return 0;
